--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,5 @@
+@import "bootstrap/scss/bootstrap-grid";
+
 /* ====================================
 // css variables
 // ==================================== */
