--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -42,5 +42,21 @@ video {
 }
 
 /* ====================================
+// bootstrap highlighter
+// ==================================== */
+
+.row + .row {
+  margin-top: 16px;
+}
+
+.row > .col,
+.row > [class^="col-"] {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: rgba(86, 61, 124, 0.15);
+  border: 1px solid rgba(86, 61, 124, 0.2);
+}
+
+/* ====================================
 // base rules
 // ==================================== */
