--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -219,13 +219,12 @@ footer {
     letter-spacing: 0;
     text-align: center;
   }
-  a img {
-    width: 5%;
-  }
-  a {
+
+  .icons {
     display: flex;
-    justify-content: center;
     align-items: center;
+    flex-wrap: nowrap;
+    justify-content: space-between;
   }
 }
 
