fixing footer, cleaning scss
shadows, background-colors, fixing img footer

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -51,6 +51,8 @@ video {
 
 /*  base rules ↓ */
 
+/*  header ↓ */
+
 header {
   position: sticky;
   top: 0;
@@ -73,12 +75,76 @@ header {
     }
   }
   .logo {
-    max-width: 35%;
+    max-width: 20%;
     padding: 15px 0;
   }
 }
 
+/*  introduction (logo + title) ↓ */
+
+.introduction {
+  background-image: url(../img/cat-header-introduction.webp);
+  background-size: cover;
+  background-color: #000;
+  box-shadow: 0 10px 11px 0 #000;
+  padding: 100px 0 88px;
+
+  .title-introduction {
+    font-family: var(--title);
+    font-weight: 900;
+    font-size: 50px;
+    color: var(--secondary-color);
+    letter-spacing: 1.53px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+  h1 {
+    text-shadow: 0 2px 38px 0 #000000;
+  }
+  img {
+    filter: drop-shadow(0 2px 38px 0 #000);
+    padding-bottom: 22px;
+  }
+
+  .introduction-in {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
+}
+
+/*  présentation / contexte ↓ */
+
+.presentation-bar {
+  background-color: var(--main-color);
+  box-shadow: 0 8px 18px 0 #000;
+
+  .presentation {
+    font-family: var(--textes);
+    font-size: 25px;
+    color: var(--secondary-color);
+    letter-spacing: 0;
+    text-align: center;
+    line-height: 30px;
+    padding: 56px;
+  }
+}
+
+/*  sections ↓ */
+
+section {
+  padding: 66px 0;
+  box-shadow: 0 5px 10px 0 #000;
+}
+
+/*  section café ↓ */
+
 .cafe {
+  background: var(--secondary-color);
+
   h3 {
     font-family: var(--title);
     font-weight: 700;
@@ -102,7 +168,11 @@ header {
   }
 }
 
+/*  section chats ↓ */
+
 .chats {
+  background-color: var(--thrid-color);
+
   h3 {
     font-family: var(--title);
     font-weight: 900;
@@ -127,42 +197,9 @@ header {
   }
 }
 
+/*  main ↓ */
+
 main {
-  .title-presentation {
-    font-family: var(--title);
-    font-weight: 900;
-    font-size: 50px;
-    color: var(--secondary-color);
-    letter-spacing: 1.53px;
-    text-align: center;
-    text-transform: uppercase;
-  }
-
-  .introduction {
-    background-image: url(../img/cat-header-introduction.webp);
-    background-size: cover;
-    background-color: #000;
-    h1 {
-      text-shadow: 0 2px 38px 0 #000000;
-    }
-    img {
-      filter: drop-shadow(0 2px 38px 0 #000);
-      padding: 101px 0 22px;
-    }
-  }
-  .presentation {
-    font-family: var(--textes);
-    font-size: 25px;
-    color: var(--secondary-color);
-    letter-spacing: 0;
-    text-align: center;
-    line-height: 30px;
-    padding: 56px;
-  }
-  .presentation-bar {
-    background-color: var(--main-color);
-  }
-
   h2 {
     font-family: var(--title);
     font-weight: 900;
@@ -171,6 +208,7 @@ main {
     letter-spacing: 1.53px;
     text-align: center;
     text-transform: uppercase;
+    padding-bottom: 60px;
   }
   .button {
     font-family: var(--title);
@@ -188,14 +226,14 @@ main {
     letter-spacing: 0;
     text-align: center;
   }
-
-  .chats {
-    background-color: var(--thrid-color);
-  }
 }
+
+/*  footer ↓ */
 
 footer {
   background-image: url(../img/footer-pattern.webp);
+  background-color: var(--main-color);
+  padding: 50px 0;
 
   h2 {
     font-family: var(--title);
@@ -205,17 +243,11 @@ footer {
     letter-spacing: 1.5px;
     text-align: center;
   }
+
   p {
     font-family: var(--textes);
     font-size: 22px;
     color: var(--secondary-color);
-    letter-spacing: 0;
-    text-align: center;
-  }
-  .credits {
-    font-family: ArialMT;
-    font-size: 16px;
-    color: var(--main-color);
     letter-spacing: 0;
     text-align: center;
   }
@@ -226,12 +258,19 @@ footer {
     flex-wrap: nowrap;
     justify-content: space-between;
   }
+
+  .localite {
+    padding: 25px 0 15px;
+  }
 }
 
-.introduction-in {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
+/*  crédits ↓ */
+
+.credits {
+  font-family: ArialMT;
+  font-size: 16px;
+  color: var(--main-color);
+  letter-spacing: 0;
+  text-align: center;
+  padding: 15px;
 }
