--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -190,9 +190,9 @@ main {
     font-size: 25px;
     color: var(--main-color);
     letter-spacing: 0;
-    // padding-top: 87px;
   }
-  span {
+
+  .product-price {
     font-family: var(--textes);
     font-size: 23px;
     color: var(--main-color);
@@ -232,8 +232,16 @@ main {
     letter-spacing: 0;
     text-align: center;
   }
-  .button {
+  .button-light {
+    font-family: var(--title) !important;
+    font-weight: 700 !important;
+    font-size: 22px;
+    letter-spacing: 0;
+    text-align: center;
     color: var(--secondary-color);
+    border: 1.5px solid #f7f4f383;
+    padding: 15px 8px;
+    box-shadow: 0 1px 3px 0 #00000021;
   }
 
   .fa-arrow-right {
@@ -259,6 +267,11 @@ section {
   color: var(--main-color);
   letter-spacing: 0;
   text-align: center;
+  border: 1.5px solid #533e36;
+  padding: 15px 8px;
+  box-shadow: 0 1px 3px 0 #00000021;
+  margin: 30px 0;
+  width: 30%;
 }
 
 /*  footer ↓ */
