--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -56,6 +56,7 @@ video {
 header {
   position: sticky;
   top: 0;
+  z-index: 900;
   background-color: var(--secondary-color);
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.159);
 
@@ -92,7 +93,13 @@ header {
 
   /*  burger menu ↓ */
 
-  @media (max-width: 800px) {
+  @media (max-width: 576px) {
+    .menu-open {
+      padding: 20px 20% 1000px;
+    }
+  }
+
+  @media (max-width: 768px) {
     .logo {
       max-width: 100px;
     }
@@ -110,20 +117,22 @@ header {
       font-size: 23px;
       color: var(--main-color);
       letter-spacing: 0;
-      padding: 20px 20px 100%;
-      right: 0;
+      padding: 20px 10% 1000px;
       width: 100%;
+      right: 0;
       top: 69px;
+      gap: 30px;
       display: flex;
       flex-direction: column;
       flex-wrap: nowrap;
       justify-content: flex-end;
       position: absolute;
       background-color: var(--secondary-color);
+      box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.159);
     }
   }
 
-  @media (min-width: 800px) {
+  @media (min-width: 769px) {
     .burger-menu {
       display: none;
       user-select: none;
