--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -147,6 +147,7 @@ header {
 
 .introduction {
   background-image: url(../img/cat-header-introduction.webp);
+  background-position: center top;
   background-size: cover;
   background-color: #000;
   box-shadow: 0 10px 11px 0 #000;
@@ -210,7 +211,6 @@ main {
   }
 
   .fa-arrow-right {
-    font-family: FontAwesome6Free-Solid;
     font-size: 20px;
     color: var(--main-color);
     letter-spacing: 0;
